--- a/src/Peachpie.Runtime/Peachpie.Runtime.csproj
+++ b/src/Peachpie.Runtime/Peachpie.Runtime.csproj
@@ -8,6 +8,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Peachpie application runtime.</Description>
     <RootNamespace>Pchp.Core</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\Peachpie.CodeAnalysis\Semantics\AccessMask.cs" Link="Dynamic\AccessMask.cs" />
